# oxide

./: .env.example  .gitignore  .npmignore  Cargo.toml  HITL_IMPLEMENTATION.md  LICENSE  MANUAL_TEST.md  OXIDE.md  README.md  TASK-SYSTEM-QUICKREF.md  USAGE.md  claude_code.md  demo_output.md  index.js  package.json  rust_shard.md  test-task-integration.sh  test-task-system.sh  test_cli.sh  test_registry.rs  test_statusbar.sh  test_tool_call.sh
.amazonq/prompts/: openspec-archive.md  openspec-proposal.md
claude/: rev.md
crates/oxide-agent/: Cargo.toml
crates/oxide-agent/src/: agent.rs  lib.rs  subagent.rs  task.rs
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/examples/: dynamic_output.rs  renderer_demo.rs  test_tools.rs
crates/oxide-cli/src/: agent.rs  app.rs  commands.rs  interaction.rs  lib.rs  main.rs  render.rs  repl.rs  statusbar.rs
crates/oxide-cli/src/commands/: builtin.rs  mod.rs  registry.rs
crates/oxide-cli/src/commands/builtin/: tools.rs
crates/oxide-cli/src/render/: markdown.rs  mod.rs  spinner.rs  statusline.rs  stream.rs  tool_status.rs
crates/oxide-cli/src/repl/: completer.rs  editor.rs  keybindings.rs  mod.rs  prompt.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/prompts/system/: core.md  doing-tasks.md  git-operations.md  objectivity.md  security.md  task-management.md  tone.md  tool-policy.md
crates/oxide-core/src/: config.rs  env.rs  error.rs  lib.rs  session.rs  types.rs
crates/oxide-core/src/prompt/: builder.rs  context.rs  mod.rs  parts.rs  tool.rs
crates/oxide-provider/: Cargo.toml  README.md
crates/oxide-provider/examples/: test_api.rs
crates/oxide-provider/src/: anthropic.rs  lib.rs  rig_provider.rs  traits.rs
crates/oxide-tools/: Cargo.toml
crates/oxide-tools/examples/: bash_tools.rs  file_tools.rs  search_demo.rs
crates/oxide-tools/src/: exec.rs  file.rs  lib.rs  permission.rs  registry.rs  search.rs  web.rs
crates/oxide-tools/src/interaction/: ask.rs  mod.rs
crates/oxide-tools/src/plan/: manager.rs  mod.rs  tests.rs  tools.rs
crates/oxide-tools/src/rig_tools/: errors.rs  exec.rs  file.rs  interaction.rs  mod.rs  plan.rs  search.rs  wrapper.rs
crates/oxide-tools/src/task/: errors.rs  manager.rs  mod.rs  types.rs
crates/oxide-tools/src/task/tools/: create.rs  get.rs  list.rs  mod.rs  update.rs
docs/: ANALYSIS_REPORT.md  BUILTIN_AGENTS.md  CLAUDE_CODE_COMPARISON.md  CLI_INTEGRATION.md  FILE_REFERENCE_FEATURE.md  IMPLEMENTED_FEATURES.md  MARKDOWN_RENDERING.md  PAOR_IMPLEMENTATION.md  PAOR_WORKFLOW.md  PLAN_MODE_DEMO.md  PLAN_MODE_GUIDE.md  PLAN_MODE_IMPLEMENTATION.md  QUICKSTART.md  SECURITY_FIX_API_TOKEN_LEAK.md  TASK_MANAGEMENT.md  TODO_FEATURES.md  agent-system.md  architecture.md  code-review.md  config-management.md  permissions.md  phase2.2-completion.md  phase2.4-completion.md  plan-mode.md  prompt-builder-design.md  prompt.md  roadmap.md  session-management.md  skill-system.md  task-system.md  tool-system.md
docs/archive/: api-compatibility-issue.md  ask-user-question-test.md  bugfix-tools-not-working.md  phase1-completion.md  phase2.3-completion.md  rig-core-migration-complete.md  rig-core-migration-evaluation.md
examples/: hitl_decision_test.rs  hitl_demo.rs  secret_demo.rs  statusbar_crossterm.rs  statusbar_test.rs  test_diff_colors.rs  workflow_example.rs
lib/: install.js
openspec/: project.md
openspec/changes/add-autonomous-workflow-engine/: IMPLEMENTATION_SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/add-autonomous-workflow-engine/specs/workflow-engine/: spec.md
openspec/changes/add-file-context-references/: proposal.md  tasks.md
openspec/changes/add-file-context-references/specs/cli-core/: spec.md
openspec/changes/add-fixed-statusbar/: VALIDATION.md  VALIDATION_RESULT.md  design.md  proposal.md  tasks.md
openspec/changes/add-fixed-statusbar/specs/statusbar/: spec.md
openspec/changes/add-lsp-client-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-lsp-client-integration/specs/code-editing/: spec.md
openspec/changes/add-lsp-client-integration/specs/lsp-client/: spec.md
openspec/changes/add-skill-system/: design.md  proposal.md  tasks.md
openspec/changes/add-skill-system/specs/cli-core/: spec.md
openspec/changes/add-skill-system/specs/skill-system/: spec.md
openspec/changes/add-tui-interface/: proposal.md  tasks.md
openspec/changes/add-tui-interface/specs/cli-core/: spec.md
openspec/changes/add-tui-interface/specs/tui/: spec.md
openspec/changes/archive/2026-01-18-init-cli-basic-functionality/: proposal.md
openspec/changes/claude-code-agent/: ARCHITECTURE.md  design.md  proposal.md  tasks.md
openspec/changes/claude-code-agent/specs/agent-system/: spec.md  (+1 more)
openspec/changes/complete-claude-code-parity/: design.md  proposal.md  tasks.md
openspec/changes/init-cli-basic-functionality/: tasks.md
openspec/changes/modernize-tui-experience/: design.md  proposal.md  tasks.md
openspec/changes/remove-agent-switch-command/: proposal.md  tasks.md
openspec/specs/cli-core/: spec.md
openspec/specs/config/: spec.md
src/: config.rs  context.rs  hooks.rs  lib.rs  main.rs  token_counter.rs  tools.rs
src/agent/: builder.rs  hitl_gatekeeper.rs  hitl_integration.rs  mod.rs  subagent.rs  types.rs
src/agent/workflow/: complexity.rs  executor.rs  mod.rs  observation.rs  orchestrator.rs  state.rs  tool_wrapper.rs  types.rs
src/agents/: hitl_agent.md
src/cli/: command.rs  file_resolver.rs  input.rs  mod.rs  render.rs  statusbar.rs
src/config/: loader.rs  secret.rs
src/skill/: executor.rs  loader.rs  manager.rs  mod.rs
src/task/: manager.rs  mod.rs
src/tools/: ask_user_question.rs  commit_linter.rs  create_directory.rs  delete_file.rs  edit_file.rs  git_guard.rs  glob.rs  grep_search.rs  mod.rs  multiedit.rs  notebook_edit.rs  plan_mode.rs  read_file.rs  scan_codebase.rs  search_replace.rs  shell_execute.rs  task.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_update.rs  write_file.rs
src/tui/: app.rs  cache.rs  events.rs  markdown.rs  mod.rs  theme.rs  ui.rs
tests/: workflow_integration_test.rs
(+12 files in other folders)
