[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["reedline", "colored", "dialoguer"]
tui = ["ratatui", "crossterm", "syntect"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
once_cell = "1.20"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
patch-apply = "0.8.3"
regex = "1.0"
walkdir = "2.0"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
names = { version = "0.14.0", default-features = false }
reedline = { version = "0.38", optional = true }
colored = { version = "3.0", optional = true }
dialoguer = { version = "0.11", optional = true, features = ["fuzzy-select"] }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
syntect = { version = "5.1", optional = true }
rig-core = "0.28.0"
futures = "0.3"
glob = "0.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
git2 = "0.19"

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "oxide"
path = "src/main.rs"
