[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["colored", "inquire", "termimad", "crossterm"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
once_cell = "1.20"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
diffy = "0.4"
regex = "1.0"
similar = "2.7"
walkdir = "2.0"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
chrono = { version = "0.4", features = ["serde"] }
names = { version = "0.14.0", default-features = false }
colored = { version = "3.0", optional = true }
inquire = { version = "0.7", optional = true, features = ["fuzzy"] }
termimad = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
rig-core = "0.28.0"
futures = "0.3"
glob = "0.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
git2 = "0.19"
tiktoken-rs = "0.5"
nu-ansi-term = "0.50"
tree-sitter = "0.22"
zeroize = "1.8"

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "oxide"
path = "src/main.rs"
