[workspace]
resolver = "2"
members = [
    "crates/oxide-core",
    "crates/oxide-provider",
    "crates/oxide-tools",
    "crates/oxide-agent",
    "crates/oxide-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/oxide"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步 trait
async-trait = "0.1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 并发
futures = "0.3"
