[package]
name = "oxide-cli"
version = "0.1.0"
edition = "2021"
description = "命令行界面"

[dependencies]
oxide-core = { path = "../oxide-core" }
oxide-provider = { path = "../oxide-provider" }
oxide-tools = { path = "../oxide-tools" }
oxide-agent = { path = "../oxide-agent" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reedline = "0.38"
crossterm = "0.29"
termimad = "0.30"
colored = "3.0"
dirs = "5.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rig-core = "0.29"

[[bin]]
name = "oxide"
path = "src/main.rs"
