[package]
name = "oxide-provider"
version = "0.1.0"
edition = "2021"
description = "LLM 提供商适配"

[dependencies]
oxide-core = { path = "../oxide-core" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
