[package]
name = "oxide-provider"
version = "0.1.0"
edition = "2021"
description = "LLM 提供商适配"

[dependencies]
oxide-core = { path = "../oxide-core" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
