[package]
name = "oxide-tools"
version = "0.1.0"
edition = "2021"
description = "工具系统实现"

[dependencies]
oxide-core = { path = "../oxide-core" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
walkdir = "2.0"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
glob = "0.3"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rig-core = "0.29"
colored = "2.0"

[dev-dependencies]
tempfile = "3.0"
